--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
-
-.DS_Store
-*.pyc
-*.egg-info
-.coverage
-server/localdev-config.json
-credentials.json
-localdev-config.json
-server/localdev-config.json
+venv
+__pycache__
